--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@stackbit/cms-git": "^1.0.35",
+        "@stackbit/types": "^2.1.14",
         "@tailwindcss/postcss": "^4.1.8",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
